<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btn_retornar"
            android:onClick="retornar"
            android:padding="4dp"
            android:layout_margin="1dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/icon_return_arrow_200_200"
            android:focusedByDefault="true"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cadastroTitulo"
            android:text="@string/addContato"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            android:padding="4dp"
            android:layout_margin="6dp"
            android:layout_alignParentTop="true"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadastroTitulo"
            android:padding="12dp"
            android:orientation="vertical"
            android:id="@+id/linCamposCadastro"
            android:layout_centerHorizontal="true"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linCampoNome"
                android:orientation="vertical"
                android:background="@color/light_gray"
                android:layout_margin="2dp"
        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoNomeLabel"
                    android:text="@string/nome"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="fill_vertical"
                    android:gravity="fill_vertical"
            />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoNomeText"
                    android:hint="@string/nomeHint"
                    android:textColorHint="@color/dark_gray_2"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linCampoEmail"
                android:orientation="vertical"
                android:background="@color/light_gray"
                android:layout_margin="2dp"
        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoEmailLabel"
                    android:text="@string/email"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="fill_vertical"
                    android:gravity="fill_vertical"
            />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoEmailText"
                    android:hint="@string/emailHint"
                    android:textColorHint="@color/dark_gray_2"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linCampoCelular"
                android:orientation="vertical"
                android:background="@color/light_gray"
                android:layout_margin="2dp"
        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoCelularLabel"
                    android:text="@string/celular"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="fill_vertical"
                    android:gravity="fill_vertical"
            />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoCelularText"
                    android:hint="@string/celularHint"
                    android:textColorHint="@color/dark_gray_2"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:inputType="textEmailAddress|textNoSuggestions"
            />
        </LinearLayout>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/relLayCampoCep"
        >

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linCampoCep"
                android:orientation="vertical"
                android:background="@color/light_gray"
                android:layout_margin="2dp"
        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoCepLabel"
                    android:text="@string/cep"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="fill_vertical"
                    android:gravity="fill_vertical"
            />
            <EditText
                    android:layout_width="275sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoCepText"
                    android:hint="@string/cepHint"
                    android:textColorHint="@color/dark_gray_2"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
            />
        </LinearLayout>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnPesqCep"
                    android:onClick="pesquisarCep"
                    android:text="@string/pesquisarCep"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:background="@color/dark_gray"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
            />
        </RelativeLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoLogradouro"
                    android:orientation="vertical"
                    android:background="@color/light_gray"
                    android:layout_margin="2dp"
            >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/linCampoLogradouroLabel"
                        android:text="@string/logradouro"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_gravity="fill_vertical"
                        android:gravity="fill_vertical"
                />
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/linCampoLogradouroText"
                        android:hint="@string/empty"
                        android:textSize="14sp"
                        android:textColor="@color/gray"

                />
            </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linCampoBairro"
                android:orientation="vertical"
                android:background="@color/light_gray"
                android:layout_margin="2dp"
        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoBairroLabel"
                    android:text="@string/bairro"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="fill_vertical"
                    android:gravity="fill_vertical"
            />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoBairroText"
                    android:hint="@string/empty"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linCampoCidade"
                android:orientation="vertical"
                android:background="@color/light_gray"
                android:layout_margin="2dp"
        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoCidadeLabel"
                    android:text="@string/cidade"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="fill_vertical"
                    android:gravity="fill_vertical"
            />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoCidadeText"
                    android:hint="@string/empty"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linCampoEstado"
                android:orientation="vertical"
                android:background="@color/light_gray"
                android:layout_margin="2dp"
        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoEstadoLabel"
                    android:text="@string/estado"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="fill_vertical"
                    android:gravity="fill_vertical"
            />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linCampoEstadoText"
                    android:hint="@string/empty"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
            />
        </LinearLayout>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSalvarContato"
                android:text="@string/salvarContato"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:background="@color/dark_gray"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:onClick="salvarContato"
        />

    </LinearLayout>
</RelativeLayout>
